2006-06-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/command.h: Add missing statement about copyright holders (i.e
	the same as command.c, as command.h was created from this file).

	* src/wxterminal/Makefile.am: New Makefile used to put all the
	wxterminal source files and bitmaps in the 'make dist' target.

	* src/Makefile.am (SUBDIRS): Add wxterminal to take the new Makefile.am
	into account.

	* configure.in (AC_OUTPUT): Include src/wxterminal/Makefile in the list
	of files to create.

2006-06-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version): Add the rest of the non-driver
	configuration option choices to the output of 'show version long'.

2006-06-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/README.ja term-ja.diff: Japanese translation
	of user manual and instructions for building the help system from it.

	* src/win/wgnuplot-ja.mnu /src/win/README.win-ja: Instructions for
	building a Japanese language versino of wgnuplot for Windows, and a
	corresponding set of menus.

2006-06-15  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c: Fix a warning about gp_alloc() by
	including alloc.h

2006-06-15  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/all.dem demo/html/index.save demo/html/Makefile:
	Add demo hidden2.dem illustrating 'set pm3d depthorder'.

2006-06-15  Johannes Zellner <johannes@zellner.org>

	* src/save.c src/set.c src/show.c src/tables.c src/tables.h:
	New option 'set p3md depthorder' to request depth-ordering of 
	pm3d quadrangles.

	* src/graph3d.c: TBOOLEAN pm3d_order_depth tracks the new option.

	* src/pm3d.c src/pm3d.h (pm3d_depth_queue_clear pm3d_depth_queue_flush)
	src/plot3d.c (calculate_set_of_isolines)
	src/color.h src/color.c (ifilled_quadrangle): New support routines.

2006-06-14  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/color.c (make_palette) src/term.c (term_start_plot):  